--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -280,6 +280,14 @@
             </p>
             <!-- Q -->
             <!-- R -->
+            <p class="definition" page="4.12">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Random Access Memory</strong> (RAM) is used as a form of main memory in computer systems.
+            </p>
+            <p class="definition" page="4.12">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Read Only Memory</strong> (ROM) is a non-volatile form of main memory.
+            </p>
             <p class="definition" page="2.08">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>record</strong> is a data structure (like an array) which can store values with different data types.
@@ -379,6 +387,10 @@
             <p class="definition" page="2.01">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Variables</strong> are named references to locations in memory for temporarily storing data while a program is running.
+            </p>
+            <p class="definition" page="4.12">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Volatile</strong> memory loses its contents when the power is switched off.
             </p>
             <!-- W -->
             <!-- X -->
