--- a/v2/4/12/index.html
+++ b/v2/4/12/index.html
@@ -72,7 +72,7 @@
         </div>
         <div id="footer"></div>
 
-        <script>let v1 = "X-XX-TITLE/";</script>
+        <script>let v1 = "4-12-RAM-and-ROM/";</script>
         <script src="../../scripts/version.js"></script>
         <script src="../../scripts/footer.js"></script>
         <script src="../../scripts/pages.js"></script>
