--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -194,6 +194,10 @@
                 <strong>Global variables</strong> have a global scope: they can be used anywhere.
             </p>
             <!-- H -->
+            <p class="definition" page="4.14">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Hard Disk Drives</strong> (HDDs) are the main form of magnetic storage in computers.
+            </p>
             <p class="definition" page="4.06">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Hardware</strong> is the physical components of a computer system.
@@ -257,6 +261,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Operators</strong> in Computer Science are just like operators in Maths: they are symbols which perform certain functions on data.
             </p>
+            <p class="definition" page="4.16">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Optical Storage</strong> uses indentations on the surface of a disc to represent binary data.
+            </p>
             <p class="definition" page="4.01">
                 <img src="../../icons/book.svg" class="icon" />
                 The <strong>OR gate</strong> receives two boolean inputs and checks if either one of them is true.
@@ -313,6 +321,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>searching algorithm</strong> is an algorithm to find the index of an item in a list.
             </p>
+            <p class="definition" page="4.14">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Secondary Storage</strong> is non-volatile storage which isn't directly accessible by the CPU.
+            </p>
             <p class="definition" page="1.02">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Selection</strong> allows you to choose between multiple options.
@@ -324,6 +336,10 @@
             <p class="definition" page="4.06">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Software</strong> refers to the programs or instructions that control a computer's hardware.
+            </p>
+            <p class="definition" page="4.15">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Solid State Drives</strong> (SSDs) are the main form of flash storage in computers.
             </p>
             <p class="definition" page="1.07">
                 <img src="../../icons/book.svg" class="icon" />
