Finish Section 4 content

--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -109,6 +109,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 The <strong>clock speed</strong> of a CPU is the number of pulses sent out by the clock every second.
             </p>
+            <p class="definition" page="4.18">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Cloud Storage</strong> is a service where files can be uploaded via the Internet to a remote server.
+            </p>
             <p class="definition" page="3.06">
                 <img src="../../icons/book.svg" class="icon" />
                 The <strong>colour depth</strong> of an image is the number of bits used to store the colour of each pixel.
