--- a/v2/4/16/index.html
+++ b/v2/4/16/index.html
@@ -64,7 +64,7 @@
         </div>
         <div id="footer"></div>
 
-        <script>let v1 = "X-XX-TITLE/";</script>
+        <script>let v1 = "4-16-Optical-Storage/";</script>
         <script src="../../scripts/version.js"></script>
         <script src="../../scripts/footer.js"></script>
         <script src="../../scripts/pages.js"></script>
