--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -20,9 +20,11 @@
     <body>
 
         <div id="header"><a href="/"><img id="logo" alt="CS.RN v2" /></a></div>
-        <div id="page">
-            <p>See also: <a href="https://quizlet.com/user/nayakrujul/folders/computer-science-key-terms">the Quizlet Sets</a>.</p>
-            <p>There are <b id="num-here">&infin;</b> definitions on this page.</p>
+        <div id="page" class="glossary">
+            <p>
+                See also: <a href="https://quizlet.com/user/nayakrujul/folders/computer-science-key-terms">the Quizlet Sets</a>.
+                There are <b id="num-here">&infin;</b> definitions on this page.
+            </p>
             <p id="sort">
                 Sort: <span id="select">
                     <span value="a-z" class="toggle active">A-Z</span>
@@ -129,6 +131,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Computational thinking</strong> is all about the steps you take to find the best solution to a complex problem.
             </p>
+            <p class="definition" page="5.01">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>computer network</strong> refers to two or more computing devices connected together in order to share data and resources.
+            </p>
             <p class="definition" page="2.01">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>constant</strong> is a special type of variable whose value does not change as the program runs.
@@ -226,6 +232,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Linear search</strong> is a searching algorithm which checks each item in order.
             </p>
+            <p class="definition" page="5.01">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>Local Area Network</strong> (LAN) covers a small geographical area located on a single site.
+            </p>
             <p class="definition" page="2.11">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Local variables</strong> have a local scope: they can only be used inside the structure they're defined in.
@@ -278,6 +288,10 @@
                 An <strong>overflow</strong> occurs when a number is too big to fit in a set amount of space.
             </p>
             <!-- P -->
+            <p class="definition" page="5.01">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>Personal Area Network</strong> (PAN) is a very small network centred around a single user.
+            </p>
             <p class="definition" page="3.06">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>pixel</strong> is a single coloured point.
@@ -413,6 +427,10 @@
                 <strong>Volatile</strong> memory loses its contents when the power is switched off.
             </p>
             <!-- W -->
+            <p class="definition" page="5.01">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>Wide Area Network</strong> (WAN) connects LANs in multiple geographical areas.
+            </p>
             <!-- X -->
             <p class="definition" page="4.01">
                 <img src="../../icons/book.svg" class="icon" />
