--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -262,6 +262,10 @@
                 <strong>Merge sort</strong> is a more complicated but sometimes more efficient sorting algorithm.
             </p>
             <!-- N -->
+            <p class="definition" page="5.02">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>Network Interface Card</strong> (NIC) is a piece of hardware inside a device that allows it to connect to networks.
+            </p>
             <p class="definition" page="4.01">
                 <img src="../../icons/book.svg" class="icon" />
                 The <strong>NOT gate</strong> receives one boolean input and outputs its opposite.
@@ -317,6 +321,10 @@
             <p class="definition" page="2.08">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>record</strong> is a data structure (like an array) which can store values with different data types.
+            </p>
+            <p class="definition" page="5.02">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>router</strong> transmits data between different LANs.
             </p>
             <p class="definition" page="3.09">
                 <img src="../../icons/book.svg" class="icon" />
@@ -379,6 +387,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Subscript notation</strong> is a way of writing the base a number has been represented in so that we don't get confused.
             </p>
+            <p class="definition" page="5.02">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>switch</strong> is a component of a wired LAN which sends data packets to devices on its network.
+            </p>
             <p class="definition" page="2.14">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Syntax errors</strong> occur when the code doesn't follow the rules (syntax) of the programming language.
@@ -427,9 +439,17 @@
                 <strong>Volatile</strong> memory loses its contents when the power is switched off.
             </p>
             <!-- W -->
+            <p class="definition" page="5.02">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>Wireless Access Point</strong> is essentially a switch for a wireless network.
+            </p>
             <p class="definition" page="5.01">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>Wide Area Network</strong> (WAN) connects LANs in multiple geographical areas.
+            </p>
+            <p class="definition" page="5.02">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>Wireless LAN</strong> (WLAN) is a local wireless network.
             </p>
             <!-- X -->
             <p class="definition" page="4.01">
