Finish Section 5 content

--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -69,6 +69,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Authentication</strong> is the process of checking that a particular user is permitted to use a system and, if so, which parts of that system they can use.
             </p>
+            <p class="definition" page="5.05">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Authentication</strong> systems determine who you are and what you can access.
+            </p>
             <!-- B -->
             <p class="definition" page="4.08">
                 <img src="../../icons/book.svg" class="icon" />
@@ -173,9 +177,17 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Encryption</strong> utilities scramble data to prevent unauthorised access.
             </p>
+            <p class="definition" page="5.05">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Encryption</strong> provides protection against data being read if it is stolen or intercepted.
+            </p>
             <p class="definition" page="2.14">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Errors</strong> (or bugs) are accidental mistakes in the code.
+            </p>
+            <p class="definition" page="5.04">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Ethernet</strong> is also a family of related protocols which operate at the link layer.
             </p>
             <!-- F -->
             <p class="definition" page="4.10">
@@ -185,6 +197,14 @@
             <p class="definition" page="3.06">
                 <img src="../../icons/book.svg" class="icon" />
                 The <strong>file size</strong> of an image is the total number of bits needed to store the image.
+            </p>
+            <p class="definition" page="5.04">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>File Transfer Protocol</strong> (FTP) also operates at the application layer.
+            </p>
+            <p class="definition" page="5.05">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Firewalls</strong> are devices that act as barriers between the network and the outside world.
             </p>
             <p class="definition" page="1.03">
                 <img src="../../icons/book.svg" class="icon" />
@@ -220,7 +240,19 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Huffman Coding</strong> is a form of lossless data compression which can be used on text files.
             </p>
+            <p class="definition" page="5.04">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>HyperText Transfer Protocol</strong> (HTTP) operates at the application layer.
+            </p>
             <!-- I -->
+            <p class="definition" page="5.04">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>Internet Messaging Access Protocol</strong> (IMAP) also operates at the application layer.
+            </p>
+            <p class="definition" page="5.04">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>Internet Protocol</strong> (IP) operates at the internet layer.
+            </p>
             <p class="definition" page="1.02">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Iteration</strong> means looping. There are three different types of loops in pseudo-code.
@@ -257,6 +289,10 @@
                 <strong>Logic symbols</strong> can also be used to represent boolean expressions.
             </p>
             <!-- M -->
+            <p class="definition" page="5.05">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>MAC Address Filtering</strong> limits network access to only whitelisted devices.
+            </p>
             <p class="definition" page="1.08">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Merge sort</strong> is a more complicated but sometimes more efficient sorting algorithm.
@@ -303,6 +339,10 @@
             <p class="definition" page="2.10">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>procedure</strong> is a subroutine which doesn't return a value.
+            </p>
+            <p class="definition" page="5.04">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>protocol</strong> is a set of rules that defines how devices on a network communicate with each other.
             </p>
             <p class="definition" page="1.02">
                 <img src="../../icons/book.svg" class="icon" />
@@ -359,6 +399,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Sequence</strong> is just a matter of writing of writing down the steps in the correct order.
             </p>
+            <p class="definition" page="5.04">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>Simple Mail Transfer Protocol</strong> (SMTP) operates at the application layer.
+            </p>
             <p class="definition" page="4.06">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Software</strong> refers to the programs or instructions that control a computer's hardware.
@@ -408,9 +452,17 @@
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>test plan</strong> should outline exactly what will be tested.
             </p>
+            <p class="definition" page="5.03">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>topology</strong> of a network refers to the how the devices on that network are arranged.
+            </p>
             <p class="definition" page="2.17">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Translators</strong> are a type of software which translate (convert) code into machine code that the computer can run.
+            </p>
+            <p class="definition" page="5.04">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>Transmission Control Protocol</strong> (TCP) operates at the transport layer.
             </p>
             <p class="definition" page="4.02">
                 <img src="../../icons/book.svg" class="icon" />
@@ -420,6 +472,10 @@
             <p class="definition" page="3.05">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Unicode</strong> is a different character set which uses multiple bytes for each character.
+            </p>
+            <p class="definition" page="5.04">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>User Datagram Protocol</strong> (UDP) also operates at the transport layer.
             </p>
             <p class="definition" page="4.08">
                 <img src="../../icons/book.svg" class="icon" />
@@ -439,6 +495,10 @@
                 <strong>Volatile</strong> memory loses its contents when the power is switched off.
             </p>
             <!-- W -->
+            <p class="definition" page="5.04">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Wi-Fi</strong> is a family of related protocols which operate at the link layer.
+            </p>
             <p class="definition" page="5.02">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>Wireless Access Point</strong> is essentially a switch for a wireless network.
