--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -147,6 +147,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>CPU cores</strong> have their own CU, ALU and cache.
             </p>
+            <p class="definition" page="6.01">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Cyber Security</strong> is an approach to computer security covering processes, practices, and technologies designed to protect networks, computers, programs, and data from attack, damage, and unauthorised access.
+            </p>
             <!-- D -->
             <p class="definition" page="2.05">
                 <img src="../../icons/book.svg" class="icon" />
@@ -297,6 +301,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Merge sort</strong> is a more complicated but sometimes more efficient sorting algorithm.
             </p>
+            <p class="definition" page="6.01">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Misconfigured access rights</strong> can open up a network to an insider attack.
+            </p>
             <!-- N -->
             <p class="definition" page="5.02">
                 <img src="../../icons/book.svg" class="icon" />
@@ -361,6 +369,10 @@
             <p class="definition" page="2.08">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>record</strong> is a data structure (like an array) which can store values with different data types.
+            </p>
+            <p class="definition" page="6.01">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Removable media devices</strong> pose two main risks to network security.
             </p>
             <p class="definition" page="5.02">
                 <img src="../../icons/book.svg" class="icon" />
@@ -473,6 +485,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Unicode</strong> is a different character set which uses multiple bytes for each character.
             </p>
+            <p class="definition" page="6.01">
+                <img src="../../icons/book.svg" class="icon" />
+                Using <strong>unpatched or outdated software</strong> can leave devices vulnerable to attack through known exploits in that software.
+            </p>
             <p class="definition" page="5.04">
                 <img src="../../icons/book.svg" class="icon" />
                 The <strong>User Datagram Protocol</strong> (UDP) also operates at the transport layer.
@@ -495,6 +511,10 @@
                 <strong>Volatile</strong> memory loses its contents when the power is switched off.
             </p>
             <!-- W -->
+            <p class="definition" page="6.01">
+                <img src="../../icons/book.svg" class="icon" />
+                Using <strong>weak or default passwords</strong> provides an easy way into a network for hackers.
+            </p>
             <p class="definition" page="5.04">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Wi-Fi</strong> is a family of related protocols which operate at the link layer.
