--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -94,6 +94,14 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Binary search</strong> is a more efficient searching algorithm which only works on sorted lists.
             </p>
+            <p class="definition" page="6.02">
+                <img src="../../icons/book.svg" class="icon" />
+                In a <strong>black-box penetration test</strong>, the ethical hackers are given no information at all about the network.
+            </p>
+            <p class="definition" page="6.03">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Blagging</strong> (or pretexting) refers to using an invented scenario to increase the chances of the victim divulging information.
+            </p>
             <p class="definition" page="1.07">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Bubble sort</strong> is a simple sorting algorithm.
@@ -336,9 +344,21 @@
                 An <strong>overflow</strong> occurs when a number is too big to fit in a set amount of space.
             </p>
             <!-- P -->
+            <p class="definition" page="6.02">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>penetration test</strong> is an authorised attempt to gain access to a network without the normal means of access.
+            </p>
             <p class="definition" page="5.01">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>Personal Area Network</strong> (PAN) is a very small network centred around a single user.
+            </p>
+            <p class="definition" page="6.03">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Pharming</strong> means creating fake versions of websites where victims enter their details.
+            </p>
+            <p class="definition" page="6.03">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Phishing</strong> is the technique of fraudulently obtaining private information, often via email or SMS.
             </p>
             <p class="definition" page="3.06">
                 <img src="../../icons/book.svg" class="icon" />
@@ -411,9 +431,17 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Sequence</strong> is just a matter of writing of writing down the steps in the correct order.
             </p>
+            <p class="definition" page="6.03">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Shouldering</strong> is the way of obtaining someone's private information (PIN, password, etc.) by looking while they enter it.
+            </p>
             <p class="definition" page="5.04">
                 <img src="../../icons/book.svg" class="icon" />
                 The <strong>Simple Mail Transfer Protocol</strong> (SMTP) operates at the application layer.
+            </p>
+            <p class="definition" page="6.03">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Social engineering</strong> is the art of manipulating people so that they divulge confidential information.
             </p>
             <p class="definition" page="4.06">
                 <img src="../../icons/book.svg" class="icon" />
@@ -514,6 +542,10 @@
             <p class="definition" page="6.01">
                 <img src="../../icons/book.svg" class="icon" />
                 Using <strong>weak or default passwords</strong> provides an easy way into a network for hackers.
+            </p>
+            <p class="definition" page="6.02">
+                <img src="../../icons/book.svg" class="icon" />
+                In a <strong>white-box penetration test</strong>, the ethical hackers are given some knowledge about the network.
             </p>
             <p class="definition" page="5.04">
                 <img src="../../icons/book.svg" class="icon" />
