--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -73,6 +73,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Authentication</strong> systems determine who you are and what you can access.
             </p>
+            <p class="definition" page="6.05">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Automatic software updates</strong> help ensure your computer has up-to-date security fixes for any known vulnerabilities.
+            </p>
             <!-- B -->
             <p class="definition" page="4.08">
                 <img src="../../icons/book.svg" class="icon" />
@@ -93,6 +97,10 @@
             <p class="definition" page="1.05">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Binary search</strong> is a more efficient searching algorithm which only works on sorted lists.
+            </p>
+            <p class="definition" page="6.05">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Biometrics</strong> authenticate or verify an individual's identity using physical data unique to that individual.
             </p>
             <p class="definition" page="6.02">
                 <img src="../../icons/book.svg" class="icon" />
@@ -130,6 +138,10 @@
             <p class="definition" page="3.06">
                 <img src="../../icons/book.svg" class="icon" />
                 The <strong>colour depth</strong> of an image is the number of bits used to store the colour of each pixel.
+            </p>
+            <p class="definition" page="6.05">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>Completely Automated Public Turing test to tell Computers and Humans Apart</strong> (CAPTCHA) confirms that the system is being accessed by a person and not a robot.
             </p>
             <p class="definition" page="3.08">
                 <img src="../../icons/book.svg" class="icon" />
@@ -305,6 +317,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>MAC Address Filtering</strong> limits network access to only whitelisted devices.
             </p>
+            <p class="definition" page="6.04">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Malware</strong> is an umbrella term used to refer to a variety of forms of hostile or intrusive software.
+            </p>
             <p class="definition" page="1.08">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Merge sort</strong> is a more complicated but sometimes more efficient sorting algorithm.
@@ -455,6 +471,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>sorting algorithm</strong> is an algorithm to put the items of a list in order.
             </p>
+            <p class="definition" page="6.04">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Spyware</strong> means malware intended to gather information about users and devices without their knowledge.
+            </p>
             <p class="definition" page="2.04">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Strings</strong> are collections of characters.
@@ -504,6 +524,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 The <strong>Transmission Control Protocol</strong> (TCP) operates at the transport layer.
             </p>
+            <p class="definition" page="6.04">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Trojans</strong> are malware programs that pretend to be useful software, which users then willingly install on their computers.
+            </p>
             <p class="definition" page="4.02">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Truth tables</strong> show the output of every possible input combination to a boolean expression.
@@ -533,6 +557,14 @@
             <p class="definition" page="2.01">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Variables</strong> are named references to locations in memory for temporarily storing data while a program is running.
+            </p>
+            <p class="definition" page="6.05">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Verification emails</strong> protect against automated sign-ups from bots, alongside CAPTCHAs.
+            </p>
+            <p class="definition" page="6.04">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Viruses</strong> (in the context of Computer Science) are small computer programs that cause damage to host systems.
             </p>
             <p class="definition" page="4.12">
                 <img src="../../icons/book.svg" class="icon" />
