Three new pages

--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -180,6 +180,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 The <strong>data type</strong> of a variable determines how its binary form in memory is interpreted.
             </p>
+            <p class="definition" page="7.01">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Databases</strong> are used to store large amounts of data, organised into tables.
+            </p>
             <p class="definition" page="2.01">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Declaring</strong> a variable means setting its value for the first time.
@@ -380,6 +384,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>pixel</strong> is a single coloured point.
             </p>
+            <p class="definition" page="7.01">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>primary key</strong> of a table is a field (column) which can uniquely identify each record.
+            </p>
             <p class="definition" page="2.10">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>procedure</strong> is a subroutine which doesn't return a value.
@@ -482,6 +490,10 @@
             <p class="definition" page="2.12">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Structured programming</strong> involves decomposing the program into manageable modules.
+            </p>
+            <p class="definition" page="7.01">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Structured Query Language</strong> (SQL, pronounced "sequel") provides an efficient way to retrieve information from a database.
             </p>
             <p class="definition" page="2.10">
                 <img src="../../icons/book.svg" class="icon" />
