Finish Section 7 content

--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -238,6 +238,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>flowchart</strong> is a diagram that depicts an algorithm.
             </p>
+            <p class="definition" page="7.07">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>foreign key</strong> is a field (column) which is the primary key of another table.
+            </p>
             <p class="definition" page="2.10">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>function</strong> is a subroutine which does return a value.
@@ -413,6 +417,10 @@
             <p class="definition" page="2.08">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>record</strong> is a data structure (like an array) which can store values with different data types.
+            </p>
+            <p class="definition" page="7.07">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>relational database</strong> is a database containing multiple tables, in order to reduce data inconsistency and redundancy.
             </p>
             <p class="definition" page="6.01">
                 <img src="../../icons/book.svg" class="icon" />
