Finish v2 of the revision guide!

--- a/v2/glossary/gcse/index.html
+++ b/v2/glossary/gcse/index.html
@@ -209,6 +209,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Encryption</strong> provides protection against data being read if it is stolen or intercepted.
             </p>
+            <p class="definition" page="8.03">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Environmental issues</strong> are about the impact on the natural world.
+            </p>
             <p class="definition" page="2.14">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Errors</strong> (or bugs) are accidental mistakes in the code.
@@ -216,6 +220,10 @@
             <p class="definition" page="5.04">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Ethernet</strong> is also a family of related protocols which operate at the link layer.
+            </p>
+            <p class="definition" page="8.01">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Ethical issues</strong> are about what is considered right and wrong by society.
             </p>
             <!-- F -->
             <p class="definition" page="4.10">
@@ -292,6 +300,10 @@
             <!-- J -->
             <!-- K -->
             <!-- L -->
+            <p class="definition" page="8.02">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Legal issues</strong> are about what is deemed right and wrong by the law.
+            </p>
             <p class="definition" page="1.04">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Linear search</strong> is a searching algorithm which checks each item in order.
