Enable Section 11 link

--- a/v2/index.html
+++ b/v2/index.html
@@ -90,7 +90,7 @@
                         <p>Problem Solving <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox homepage-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./11/" class="no-underline section-link">
                         <h1>Section 11</h1>
                         <p>Data Representation <br /> <em>(in progress)</em></p>
